# Unless we have ENABLE_ALL set, based the building of png on
# the system detection results
if (ENABLE_ALL AND NOT DEFINED ENABLE_OPENCV)
  set(ENABLE_OPENCV ON)
endif (ENABLE_ALL AND NOT DEFINED ENABLE_OPENCV)

if (NOT ENABLE_OPENCV)

  find_package(OpenCV)

  if (NOT OpenCV_FOUND AND NOT DEFINED ENABLE_OPENCV)
    set(ENABLE_OPENCV "ON" CACHE BOOL "Enable OpenCV build")
  endif (NOT OpenCV_FOUND AND NOT DEFINED ENABLE_OPENCV)

endif (NOT ENABLE_OPENCV)
set(ENABLE_OPENCV "${ENABLE_OPENCV}" CACHE BOOL "Enable OpenCV build")

if (ENABLE_OPENCV)

  if (TARGET ZLIB_BLD)
    set(Z_PREFIX_STR "brl_")
    set(ZLIB_TARGET ZLIB_BLD)
  endif (TARGET ZLIB_BLD)

  if (TARGET PNG_BLD)
    set(PNG_TARGET PNG_BLD)
  endif (TARGET PNG_BLD)

  if (TARGET PROJ_BLD)
    set(PROJ_TARGET PROJ_BLD)
  endif (TARGET PROJ_BLD)

  if (TARGET SQLITE3_BLD)
    set(SQLITE3_TARGET SQLITE3_BLD)
  endif (TARGET SQLITE3_BLD)

  ExternalProject_Add(OPENCV_BLD
    URL "${CMAKE_CURRENT_SOURCE_DIR}/opencv"
    BUILD_ALWAYS ${EXT_BUILD_ALWAYS} ${LOG_OPTS}
    PATCH_COMMAND ${PATCH_EXECUTABLE};-E;-p1;${PATCH_OPTIONS};-i;${CMAKE_CURRENT_SOURCE_DIR}/opencv.patch
    CMAKE_ARGS
    -DMIN_VER_CMAKE=3.19
    ${BUILD_TYPE_SPECIFIER}
    $<$<BOOL:${ZLIB_TARGET}>:-DZ_PREFIX=ON>
    $<$<BOOL:${ZLIB_TARGET}>:-DZ_PREFIX_STR=${Z_PREFIX_STR}>
    $<$<BOOL:${ZLIB_TARGET}>:-DZLIB_ROOT=${CMAKE_BUNDLE_INSTALL_PREFIX}>
    $<$<BOOL:${ZLIB_TARGET}>:-DZLIB_ROOT=${CMAKE_BUNDLE_INSTALL_PREFIX}>
    $<$<BOOL:${PNG_TARGET}>:-DPNG_ROOT=${CMAKE_BUNDLE_INSTALL_PREFIX}>
    -DBIN_DIR=${BIN_DIR}
    -DLIB_DIR=${LIB_DIR}
    -DCMAKE_INSTALL_LIBDIR=${LIB_DIR}
    -DOPENCV_INSTALL_BINARIES_PREFIX=""
    -DOPENCV_CONFIG_INSTALL_PATH=${LIB_DIR}/cmake/opencv4
    -DOPENCV_SKIP_CMAKE_ROOT_CONFIG=ON
    -DBUILD_STATIC_LIBS=${BUILD_STATIC_LIBS}
    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
    -DCMAKE_INSTALL_PREFIX=${CMAKE_BUNDLE_INSTALL_PREFIX}
    -DCMAKE_INSTALL_RPATH=${CMAKE_BUNDLE_INSTALL_PREFIX}/${LIB_DIR}
    -DBUILD_IPP_IW=OFF
    -DBUILD_ITT=OFF
    -DBUILD_JAVA=OFF
    -DBUILD_JPEG=OFF
    -DBUILD_PERF_TESTS=OFF
    -DBUILD_TIFF=ON
    -DBUILD_TESTS=OFF
    -DBUILD_opencv_apps=ON
    -DBUILD_opencv_calib3d=OFF
    -DBUILD_opencv_core=ON
    -DBUILD_opencv_dnn=ON
    -DBUILD_opencv_features2d=ON
    -DBUILD_opencv_flann=ON
    -DBUILD_opencv_highgui=ON
    -DBUILD_opencv_imgcodecs=ON
    -DBUILD_opencv_imgproc=ON
    -DBUILD_opencv_java_bindings_generator=OFF
    -DBUILD_opencv_js=OFF
    -DBUILD_opencv_js_bindings_generator=OFF
    -DBUILD_opencv_ml=OFF
    -DBUILD_opencv_objc_bindings_generator=OFF
    -DBUILD_opencv_objdetect=ON
    -DBUILD_opencv_photo=ON
    -DBUILD_opencv_python3=OFF
    -DBUILD_opencv_python_bindings_generator=OFF
    -DBUILD_opencv_python_tests=OFF
    -DBUILD_opencv_stitching=ON
    -DBUILD_opencv_ts=OFF
    -DBUILD_opencv_video=OFF
    -DBUILD_opencv_videoio=OFF
    -DBUILD_opencv_world=OFF
    -DWITH_1394=ON
    -DWITH_ADE=OFF
    -DWITH_ARAVIS=OFF
    -DWITH_AVIF=OFF
    -DWITH_CANN=OFF
    -DWITH_CLP=OFF
    -DWITH_CUDA=OFF
    -DWITH_EIGEN=OFF
    -DWITH_FFMPEG=OFF
    -DWITH_FLATBUFFERS=ON
    -DWITH_FREETYPE=OFF
    -DWITH_GDAL=OFF
    -DWITH_GDCM=OFF
    -DWITH_GPHOTO2=OFF
    -DWITH_GSTREAMER=OFF
    -DWITH_GTK=OFF
    -DWITH_GTK_2_X=OFF
    -DWITH_HALIDE=OFF
    -DWITH_HPX=OFF
    -DWITH_IMGCODEC_HDR=ON
    -DWITH_IMGCODEC_PFM=ON
    -DWITH_IMGCODEC_PXM=ON
    -DWITH_IMGCODEC_SUNRASTER=ON
    -DWITH_IPP=OFF
    -DWITH_ITT=OFF
    -DWITH_JASPER=OFF
    -DWITH_JPEG=OFF
    -DWITH_LAPACK=OFF
    -DWITH_LIBREALSENSE=OFF
    -DWITH_MFX=OFF
    -DWITH_OAK=OFF
    -DWITH_OBSENSOR=OFF
    -DWITH_ONNX=OFF
    -DWITH_OPENCL=OFF
    -DWITH_OPENCLAMDBLAS=OFF
    -DWITH_OPENCLAMDFFT=OFF
    -DWITH_OPENCL_SVM=OFF
    -DWITH_OPENEXR=OFF
    -DWITH_OPENGL=OFF
    -DWITH_OPENJPEG=OFF
    -DWITH_OPENMP=OFF
    -DWITH_OPENNI=OFF
    -DWITH_OPENNI2=OFF
    -DWITH_OPENVINO=OFF
    -DWITH_OPENVX=OFF
    -DWITH_PLAIDML=OFF
    -DWITH_PNG=ON
    -DWITH_PROTOBUF=OFF
    -DWITH_PTHREADS_PF=ON
    -DWITH_PVAPI=OFF
    -DWITH_QT=OFF
    -DWITH_QUIRC=OFF
    -DWITH_SPNG=OFF
    -DWITH_TBB=OFF
    -DWITH_TIFF=ON
    -DWITH_TIMVX=OFF
    -DWITH_UEYE=OFF
    -DWITH_V4L=OFF
    -DWITH_VA=OFF
    -DWITH_VA_INTEL=OFF
    -DWITH_VTK=OFF
    -DWITH_VULKAN=OFF
    -DWITH_WAYLAND=OFF
    -DWITH_WEBNN=OFF
    -DWITH_WEBP=OFF
    -DWITH_XIMEA=OFF
    -DWITH_XINE=OFF
    LOG_CONFIGURE ${EXT_BUILD_QUIET}
    LOG_BUILD ${EXT_BUILD_QUIET}
    LOG_INSTALL ${EXT_BUILD_QUIET}
    LOG_OUTPUT_ON_FAILURE ${EXT_BUILD_QUIET}
    STEP_TARGETS install
    )

  if (TARGET PATCH_BLD)
    ExternalProject_Add_StepDependencies(OPENCV_BLD configure PATCH_BLD-install)
  endif (TARGET PATCH_BLD)

  if (TARGET ZLIB_BLD)
    ExternalProject_Add_StepDependencies(OPENCV_BLD configure ZLIB_BLD-install)
  endif (TARGET ZLIB_BLD)

  if (TARGET PNG_BLD)
    ExternalProject_Add_StepDependencies(OPENCV_BLD configure PNG_BLD-install)
  endif (TARGET PNG_BLD)

endif (ENABLE_OPENCV)

# Copy the license into position in CMAKE_BUNDLE_INSTALL_PREFIX
file(MAKE_DIRECTORY ${CMAKE_BUNDLE_INSTALL_PREFIX}/doc/legal/other)
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/opencv/LICENSE
  ${CMAKE_BUNDLE_INSTALL_PREFIX}/doc/legal/other/opencv.txt
  COPYONLY
  )

# Local Variables:
# tab-width: 8
# mode: cmake
# indent-tabs-mode: t
# End:
# ex: shiftwidth=2 tabstop=8
